review of modelling section
#33

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -483,7 +483,7 @@ With temperature increase, foliage photosynthesis and respiration are coupled at
 
 
 
-## Implications for demography and species distributions
+## Ecological implications
 
 **Differences across forest vertical gradients in biophysical conditions, plant traits, and metabolism and its thermal responses scale up to affect whole-tree ecology in several ways.** 
 Vertical gradients in the biophysical environment shape which plant strategies, or sets of traits, are competitive in understory versus canopy conditions.
@@ -524,21 +524,21 @@ Ultimately, the way in which vertical gradients influence growth, mortality, and
 
 **Appears to affect community change under warming (Zellweger et al. 2020).**
 
-## Implications for Modeling / Scaling / Future Climate Projections 
-
-*Ecosystem Scale Implications*
-(Elsa: I included info on ecosystem function here -- e.g., transpiration, gpp)
+### Ecosystem Scale Implications
 
 Leaf-scale properties and processes aggregate non-linearly  in vertical and horizontal space, influencing stand-level ecosystem processes, and in turn biosphere-atmosphere exchanges of water, carbon, energy, and trace gases. As described above, variation in temperature across vertical gradients can interact with local light conditions and other vertically varying meteorological conditions to affect species composition (e.g., see @nakamuraForestsTheirCanopies2017), leaf traits, and photosynthesis . Linked to this local biophysical variation is the partitioning of evapotranspiration (ET) into soil evaporation, canopy evaporation, and transpiration, which occur across varying spatiotemporal scales depending on light availability, water stress, stomatal physiology, and turbulent transfer (Lawrence et al. 2007, Staudt et al. 2011). Vertical microclimate gradients interact with vertical variation in foliage density, influencing not only the location of evapotranspiration in the canopy, but also differences in rates and net gross primary productivity (GPP, Banerjee & Linn 2018). It has been demonstrated that net carbon assimilation and transpiration can vary substantially for forest canopies with the same LAI but different leaf area density distributions (e.g., Katul et al 2004 , Banerjee & Linn 2018). Further, although transpiration tends to be the dominant component of ET, partitioning is more complex in open canopies where soil evaporation can become more dominant (Baldocchi et al. 2004, Ma et al. 2020), likely affecting vertical thermal gradients. In other words, it matters whether foliage is dense or sparse, and whether it is concentrated higher in the canopy, lower in the canopy, or evenly distributed throughout. 
 
-Still, partitioning ET into its constituent components, let alone vertically partitioning transpiration rates in the canopy, remains a challenge. Eddy covariance techniques, sap flow measurements, and stable isotope analysis offer useful tools, although errors can be large (Williams et al 2004, Herbst et al. 1996). To date, empirical analyses of ET vertical partitioning and interactions with temperature and vegetation structure have be concentrated in midlatitude ecosystems (e.g. Haverd et al 2009, 2011, Staudt et al. 2011, Ringgaard et al. 2014). With respect to changing temperatures, the net effect of leaf- and plant-level thermal responses remains an active area of research, including both how vertical variation in thermal sensitivity influences forest ecosystem dynamics and biosphere-atmosphere interactions. 
+Still, partitioning ET into its constituent components, let alone vertically partitioning transpiration rates in the canopy, remains a challenge. Eddy covariance techniques, sap flow measurements, and stable isotope analysis offer useful tools, although errors can be large (Williams et al 2004, Herbst et al. 1996). To date, empirical analyses of ET vertical partitioning and interactions with temperature and vegetation structure have be concentrated in midlatitude ecosystems (e.g. Haverd et al 2009, 2011, Staudt et al. 2011, Ringgaard et al. 2014) *(KAT: but see Kunert et al. 2017 -not sure if this is equivalent)*. With respect to changing temperatures, the net effect of leaf- and plant-level thermal responses remains an active area of research, including both how vertical variation in thermal sensitivity influences forest ecosystem dynamics and biosphere-atmosphere interactions. 
 
 [Elsa: do we want a section about research opportunities using remote sensing or is that outside the scope of this review?] 
-An increasing availability of airborne and spaceborne LiDAR remote sensing data offers a promising opportunity for mapping vertical thermal gradients and vegetation structure. [Drone based FLIR cams, tower thermal cams (Pau et al 2018), ECOSTRESS]. To evaluate large-scale ecosystem patterns, high resolution vertically resolved vegetation structure from LiDAR data can be analyzed in combination with collocated field measurements collected using towers (FluxNet REF), canopy cranes (@nakamuraForestsTheirCanopies2017), or by tree climbing (REF – e.g. Asner papers, Shenkin et al – Unding Jami’s work). Existing research efforts have already revealed incredibly heterogeneity in vegetation structure, diversity, traits, and properties both within and across ecosystems (REFS – Stovall, Schneider, …others). 
+An increasing availability of airborne and spaceborne LiDAR remote sensing data offers a promising opportunity for mapping vertical thermal gradients and vegetation structure. [Drone based FLIR cams, tower thermal cams (Pau et al 2018), ECOSTRESS]. To evaluate large-scale ecosystem patterns, high resolution vertically resolved vegetation structure from LiDAR data can be analyzed in combination with collocated field measurements collected using towers (FluxNet REF), canopy cranes (@nakamuraForestsTheirCanopies2017), or by tree climbing (REF – e.g. Asner papers, Shenkin et al – Unding Jami’s work). Existing research efforts have already revealed incredibly heterogeneity in vegetation structure, diversity, traits, and properties both within and across ecosystems (REFS – Stovall, Schneider, …others).
 
-*Representing Vertical Gradients in Models* 
-[How do models currently integrate or not integrate these concepts and dynamics]
-(@Nidhi & @Krista, feel free to edit/remove any of the above text. I'm adding more text than we'll want in the end, but I want to air on the side of more rather than less so that you can make decisions about what content you think best fits the goal of this review. At some point, perhaps we should discuss this section further and I can revise based on that.) 
+## Implications for Modeling and projecting climate change responses 
+ 
+
+### Representing Vertical Gradients in Models
+
+*(@Nidhi & @Krista, feel free to edit/remove any of the above text. I'm adding more text than we'll want in the end, but I want to air on the side of more rather than less so that you can make decisions about what content you think best fits the goal of this review. At some point, perhaps we should discuss this section further and I can revise based on that.) *
 
 Models representing ecosystem dynamics related to carbon, energy, and water fluxes operate at a range of scales and have varying degrees of complexity , and include offline models and models that can be fully coupled with Earth System Models (ESMs). Dynamic global vegetation models (DGVMs) comprise the land surface models in ESMs used to predict the global distribution of vegetation types and biosphere-atmosphere feedbacks (Cao & Woodward, 1998; Foley et al., 1996; Sitch et al., 2003; Woodward & Lomas, 2004). Improved representation of vegetation demographic processes in ESMs, specifically including forest canopy architectural variation in both horizontal and vertical directions, has repeatedly been identified as a critical step toward reduced uncertainty  and more accurate characterization of biologically mediated feedbacks (Banerjee & Linn 2018, Evans, 2012; Moorcroft, 2006; Moorcroft, Hurtt, & Pacala, 2001; Purves & Pacala, 2008; Thomas, Brookshire, & Gerber, 2015). Still, as models increase in complexity, model developments and improvements have direct tradeoffs with increased computational cost and potentially decreased interpretability of model output. 
 
@@ -550,13 +550,9 @@ To review the vertical light environment and thermodynamics of CBMs in more deta
 
 Temperature is an atmospheric boundary condition driving the ED2 model (Longo et al 2019). Each patch in each grid cell is defined by a thermodynamic envelope, comprised of distinct thermodynamic systems for each soil layer, temporary surface water or snow layer, the aboveground component of each cohort, and the canopy air space (Longo et al 2019). The  atmosphere above and outside of the canopy air space is referred to as free air and is determined directly from boundary conditions in ED2. Patches exchange heat and mass with the free air  and lose water and associated energy through surface and sub-surface runoff. The net enthalpy flux of soil, temporary surface water, and vegetation thermodynamic systems in ED2 are exclusively due to associated water fluxes, whereas the eddy flux between the free air and the canopy air space includes both water transport and flux associated with the mixing of air with different temperatures between the canopy air space and free air (Longo et al 2019).
 
-Because most CBMs are spatially implicit within grid cells, direct and diffuse photosynthetically active radiation (PAR) is distributed to cohorts of differing heights using radiative transfer models that depend on designated rules associated with how crown architecture is represented, rather than via direct spatial competition determined by spatially explicit crown locations (Fisher et al. 2010?). The flat-top crown method used in ED and ED2 stacks cohort-layers vertically, and a radiative transfer model is used to determine radiation absorbed by each layer at its midpoint, meaning that each cohort is shaded by all taller cohorts. This is distinct from other models that represent crown architecture using a perfect plasticity approximation (PPA) approach, which assumes that tree crowns completely fill canopy gaps through phototropism (stem leaning) and crown filling (Strigul et al. 2008). Discrete canopy layers are comprised of self-organizing crowns that all receive the same incoming radiation. Once the canopy layer is filled with tree crowns, successive shorter trees inhabit the subsequent understory layer and are shaded by the trees in the canopy (Fisher et al 2010/2018?). Models using the PPA approach differ in number of understory layers (e.g. some only have one) (Fisher et al 2018). Though an improvement over big-leaf models, models that separate the canopy into only two layers (e.g., sunlit and shaded portions) may not be able to capture important within-canopy variation in terms of leaf dynamics (e.g., seasonal shifts in vertical leaf area distributions, Smith et al. 2019) and functions (e.g. thermal responses, as we present in this paper). Hence, multi-layered ecosystem models may be necessary for accurately projecting future forest function. (E.g. see de Pury & Farquhar, 1997)
+Because most CBMs are spatially implicit within grid cells, direct and diffuse photosynthetically active radiation (PAR) is distributed to cohorts of differing heights using radiative transfer models that depend on designated rules associated with how crown architecture is represented, rather than via direct spatial competition determined by spatially explicit crown locations (Fisher et al. 2010?). The flat-top crown method used in ED and ED2 stacks cohort-layers vertically, and a radiative transfer model is used to determine radiation absorbed by each layer at its midpoint, meaning that each cohort is shaded by all taller cohorts. This is distinct from other models that represent crown architecture using a perfect plasticity approximation (PPA) approach, which assumes that tree crowns completely fill canopy gaps through phototropism (stem leaning) and crown filling (Strigul et al. 2008). Discrete canopy layers are comprised of self-organizing crowns that all receive the same incoming radiation. Once the canopy layer is filled with tree crowns, successive shorter trees inhabit the subsequent understory layer and are shaded by the trees in the canopy (Fisher et al 2010/2018?). Models using the PPA approach differ in number of understory layers (e.g. some only have one) (Fisher et al 2018). Though an improvement over big-leaf models, models that separate the canopy into only two layers (e.g., sunlit and shaded portions) may not be able to capture important within-canopy variation in terms of leaf dynamics (e.g., seasonal shifts in vertical leaf area distributions, Smith et al. 2019) and functions (e.g. thermal responses, as we present in this paper). Hence, multi-layered ecosystem models may be necessary for accurately projecting future forest function. (E.g. see de Pury & Farquhar, 1997).
 
 
-*Knowledge Gaps & Future Research*
--	What do [current model abilities or inabilities to integrate these concepts] mean for about ability to predict/understand how forest ecosystems will respond in the future?
--	What major gaps in knowledge and/or important questions emerge from this review (i.e. a lot of focus on droughts justifiably, but understanding heterogeneous impacts of temperature increases on forest ecosystems, particularly at vertically resolved scales is also important.)
-- Not sure where this section should go
 
 ### Implications for climate change responses
 
@@ -568,6 +564,8 @@ Because most CBMs are spatially implicit within grid cells, direct and diffuse p
 --Variation across horizontal biophysical gradients (climate, soils, etc.)(E.O)
 
 ## Conclusions
+
+*Where we seem to end up is that we really know very little about differences in temperature responses of metabolism and woody growth across the strata-- there are only a small number of studies, often showing insignificant differences or mixed results.*
 
 ## SI files
 
