--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -109,23 +109,20 @@ In the meantime, our findings imply that while large canopy trees are the most v
 ## Introduction
 
 **Forest responses and feedbacks to climate change will have a critical influence on the future of Earth's climate.**
-Globally, temperatures have risen # $^\circ$C since YEAR and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC REF), accompanied by increasing severity and frequency of heat waves [@perkinsIncreasingFrequencyIntensity2012] and hotter droughts [REFS].
-These changes are expected to have profound effects on tree metabolism and forest ecosystem function (REFS; IPBES report), including *(altered rates of photosynthesis and respiration)* [REF], foliar damage during heat waves [], and reduced growth and elevated mortality during drought [REFS].
+Globally, temperatures have risen # $^\circ$C since YEAR and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC REF), accompanied by increasing severity and frequency of heat waves [@perkinsIncreasingFrequencyIntensity2012] and hotter droughts [*Trenberth et al. 2014*].
+These changes are expected to have profound effects on tree metabolism and forest ecosystem function (REFS; IPBES report), including altered rates of photosynthesis and respiration [REFS], foliar damage during heat waves [*O'Sullivan et al. 2017*], and reduced growth and elevated mortality during drought [REFS].
 Individually or in combination, these changes have the potential to reduce forest C sequestration, as may already be occurring in some forests [REFS; @sullivanLongtermThermalSensitivity2020]. 
 The resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016, Bonan 2008], yet this influence remains extremely uncertain [REFS].
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davis_microclimatic_2019].**
-Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017] by buffering extreme temperatures along with other macroclimatic conditions in the understory. This creates a vertical stratification of biophysical environmental conditions such as temperature, light, wind, humidity and CO2 that influences leaf traits, thermoregulation and metabolism along the gradient, with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016].
+Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. 
+Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017] by buffering extreme temperatures along with other macroclimatic conditions in the understory. 
+This creates a vertical stratification of biophysical environmental conditions such as temperature, light, wind, humidity and CO~2~ that influences leaf traits, thermoregulation and metabolism along the gradient, with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016].
 
-~~The capacity of buffering largely depends on canopy cover and water availability [@davis_microclimatic_2019], each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions [@senfCanopyMortalityHas2018a].Increasing global temperatures can increase canopy leaf temperatures sometimes above ambient temperature when transpiration is low, leading to temperate and tropical forest canopies functioning beyond or close to their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. In wetter conditions, available water facilitates leaf transpiration through open stomata; however increased relative humidity in tropical regions indirectly caused by increased temperature reduces transpiration, leading to high leaf temperatures in the canopy [@tibbittsHumidityPlants1979; @perezIncreasingHumidityThreatens2018]~~
 
-~~Frequent drought-related hydraulic limitation in forests alters species thermoregulation [@sastry_leaf_2018], and also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to sensitivity of overstory trees to variability in water availability and precipitation [@rollinsonClimateSensitivityUnderstory 2020]. Larger trees suffer disproportionally greater hydraulic stress during drought [resulting in heat stressed canopy-leaves], which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to increase [@mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of soil water enables canopies with suitable foliar traits to remain cool through continuous evapotranspiration even during increasing air temperature, thereby buffering understory microclimates, unless relative humidity is so high as to reduce rate of evapotranspiration [@perezIncreasingHumidityThreatens2018].~~
 
-~~While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020]. Understories experience a distinct set of pressures as microclimatic warming combines with conditions of limited light and related foliar traits, inter-species resource competition, and herbivory [@niinemetsResponsesForestTrees2010a; @bartholomewSmallTropicalForest2020]. Since temperature sensitivity is directly linked with plant metabolic processes and performance, even around 1 degree of warming can lead to changes in plant species composition and growth [@bertrandChangesPlantCommunity2011; @bertrandCommentForestMicroclimate2020]. Plant communities in forest microclimates are already undergoing thermophilization [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]. Tree-ring analysis in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. In addition, understory growth phenology is more sensitive to warming than canopy-- showing earlier spring onset and later autumn senescense [@zohnerOngoingSeasonallyUneven2019].~~
 
-~~Microclimate warming has implications for forest regeneration [@vonarxSpatiotemporalEffectsForest2012a]. Temperature driven photosynthesis limitation is reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominanted by younger trees [@mcdowellPervasiveShiftsForest2020]. Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.~~
-
-While there is evidence for temperature driven shifts in forest dynamics, leaf-level metabolic and performance changes influenced by biophysical conditions and warming in the overstory and understory are still unclear. Thus, it is becoming important to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy. This will provide a pathway for understanding how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions with additional feedbacks to forest structure and microclimates.
+~~While there is evidence for temperature driven shifts in forest dynamics, leaf-level metabolic and performance changes influenced by biophysical conditions and warming in the overstory and understory are still unclear.~~ Thus, it is becoming important to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy. This will provide a pathway for understanding how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions with additional feedbacks to forest structure and microclimates.
 
 
 (@niinemetsWithincanopyVariationRate2004a highlights how biophysical and photosynthetic gradients vary along the vertical canopy profile, however our current knowledge of this topic is lacking.)
@@ -233,6 +230,7 @@ If soil and stem respiration do not acclimate fully to rising temperatures, the 
 
 
 *ALL OF THE FOLLOWING CONTENT SHOULD BE WORKED INTO RELEVANT PARAGRAPHS EARLIER IN THIS SECTION:*
+
 
 The strength of this buffering varies across forests, influenced by both forest characteristics (Fig. `r fig_NEON_differences`) and the biophysical environment.
 First, buffering increases with canopy cover and water availability.
@@ -512,6 +510,8 @@ Interaction between degrees of shade x ontogeny x height with rising temperature
 
 ![**Figure `r fig_treerings`. DRAFT tree-rings figure. Current figure shows (a) drought responses as a function of height in a temperate broadleaf forest (SCBI), from McGregor et al. 2020; (b) responses to growing season temperature in eight New England forests, from Rollinson et al. 2020.  I'M NOT SURE THIS IS WHAT WE WANT, BUT I THINK SOME SORT OF TREE-RING FIGURE WOULD BE GOOD. [ISSUE # 29](https://github.com/EcoClimLab/vertical-thermal-review/issues/29).](tree_rings/tree_rings_draft.png)
 
+Microclimate warming has implications for forest regeneration [@vonarxSpatiotemporalEffectsForest2012a]. Temperature driven photosynthesis limitation is reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominanted by younger trees [@mcdowellPervasiveShiftsForest2020]. Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
+
 ### Distribution of species and traits across the vertical profile
 
 *(This section should address inter-specific vs intra-specific variation, as Tables 1 and 2 refer to intra-specific variation, but most models will focus on trait variation across strata, regardless of species). 
@@ -560,13 +560,23 @@ Because most CBMs are spatially implicit within grid cells, direct and diffuse p
 
 --Variation across horizontal biophysical gradients (climate, soils, etc.)(E.O)
 
+*Frequent drought-related hydraulic limitation in forests alters species thermoregulation [@sastry_leaf_2018], and also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to sensitivity of overstory trees to variability in water availability and precipitation [@rollinsonClimateSensitivityUnderstory 2020]. Larger trees suffer disproportionally greater hydraulic stress during drought [resulting in heat stressed canopy-leaves], which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to increase [@mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of soil water enables canopies with suitable foliar traits to remain cool through continuous evapotranspiration even during increasing air temperature, thereby buffering understory microclimates, unless relative humidity is so high as to reduce rate of evapotranspiration [@perezIncreasingHumidityThreatens2018].*
+
+*While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020]. Understories experience a distinct set of pressures as microclimatic warming combines with conditions of limited light and related foliar traits, inter-species resource competition, and herbivory [@niinemetsResponsesForestTrees2010a; @bartholomewSmallTropicalForest2020]. Since temperature sensitivity is directly linked with plant metabolic processes and performance, even around 1 degree of warming can lead to changes in plant species composition and growth [@bertrandChangesPlantCommunity2011; @bertrandCommentForestMicroclimate2020]. Plant communities in forest microclimates are already undergoing thermophilization [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]. Tree-ring analysis in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. In addition, understory growth phenology is more sensitive to warming than canopy-- showing earlier spring onset and later autumn senescense [@zohnerOngoingSeasonallyUneven2019].*
+
+*The capacity of buffering largely depends on canopy cover and water availability [@davis_microclimatic_2019], each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions [@senfCanopyMortalityHas2018a]. Increasing global temperatures can increase canopy leaf temperatures sometimes above ambient temperature when transpiration is low, leading to temperate and tropical forest canopies functioning beyond or close to their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. In wetter conditions, available water facilitates leaf transpiration through open stomata; however increased relative humidity in tropical regions indirectly caused by increased temperature reduces transpiration, leading to high leaf temperatures in the canopy [@tibbittsHumidityPlants1979; @perezIncreasingHumidityThreatens2018].*
+
 ## Conclusions
+
 
 - across vertical gradients, directional trends in biophysical environment and leaf traits are the rule, suggesting that the physiology and ecology that have these as their underpinnings should also vary
 - a number of studies confirm that this is the case.
 - However, when we ask the critical question of how the temperature sensitivities  of metabolism and woody growth varies across these different environments, we can't say much-- there are only a small number of studies, often showing insignificant differences or mixed results.
 - We lean towards the conclusion that while large canopy trees ware the most vulnerable to warming when combined with drought, understory trees may be more vulnerable under more mesic conditions, but more research is needed. 
 - Critically, change to the vertical gradient--e.g., through increased mortality of canopy trees--will change processses across forest strata, with potentially dramatic consequences. (some of the literature on forest degredation or fragmentation could inform what happens when those gradients change)
+
+
+
 
 ## SI files
 
